// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests TestStatusBadge.stories AllBadges 1`] = `
<div>
  <div
    class="css-134efv6"
  >
    <div
      class="leafygreen-ui-ud6teo"
      data-cy="test-status-badge"
    >
      Fail
    </div>
    <div
      class="leafygreen-ui-ixbeze"
      data-cy="test-status-badge"
    >
      Skip
    </div>
    <div
      class="leafygreen-ui-1qtf7xy"
      data-cy="test-status-badge"
    >
      Silent Fail
    </div>
    <div
      class="leafygreen-ui-n4itms"
      data-cy="test-status-badge"
    >
      Pass
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests TestStatusBadge.stories Default 1`] = `
<div>
  <div
    class="leafygreen-ui-n4itms"
    data-cy="test-status-badge"
  >
    Pass
  </div>
</div>
`;
